# axum-webapp

./: Cargo.toml  README.md
.cargo/: config.toml
public/: index.html
src/: app_state.rs  config.rs  error.rs  errors.rs  log.rs  main.rs  models.rs
src/context/: mod.rs
src/log/: mod.rs
src/model/: mod.rs
src/web/: middleware.rs  mod.rs  mw_auth.rs  mw_resp_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
tests/: client.rs
