[package]
name = "axum-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["cookies"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.12.0"
tokio = { version = "1.43.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs"] }

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
